--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>springBootAws</finalName>
     </build>
 
 </project>
